# rp2040_binary_clock

./: .gitignore  LICENSE  README.md  binary_clock.kicad_pcb  binary_clock.kicad_pro  binary_clock.kicad_sch  fp-lib-table  rp2040_binary_clock.ino
custom_footprints.pretty/: Battery_Holder_Coin_2032_BS-7.kicad_mod
firmware/: .gitignore  CMakeLists.txt  main.c
switch.pretty/: SW_Slide_8.6x3.8x7.0_P2.54mm.kicad_mod
